--- a/css/calc-layout.css
+++ b/css/calc-layout.css
@@ -378,6 +378,18 @@
     color: white;
     text-align: center;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
+    position: relative;
+}
+
+.calc-result-main::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 2px;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0));
+    opacity: 0.7;
 }
 
 .calc-result-main .big-number {
